<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.FloatingActionButton xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/add_reunion"
    android:layout_width="20dp"
    android:layout_height="20dp"
    app:fabCustomSize="20dp"
    android:layout_gravity="end|bottom"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="5dp"
    app:backgroundTint="@color/design_default_color_primary"
    app:srcCompat="@android:drawable/ic_input_add" />




